--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "react-dropdown-input": "^0.1.11",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
+    "react-tag-input-component": "^2.0.2",
+    "react-tagsinput": "^3.20.3",
     "react-transition-group": "^4.4.5",
     "realtime-bpm-analyzer": "^4.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-tagsinput": "^3.20.6",
     "@types/react-transition-group": "^4.4.10",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
