--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.2.3",
     "framer-motion": "^11.1.1",
