--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.2.3",
+    "firebase": "^10.12.1",
     "framer-motion": "^11.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
