--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@react-oauth/google": "^0.12.1",
     "@react-spring/web": "^9.7.3",
     "axios": "^1.6.8",
     "bootstrap": "^5.2.3",
+    "firebase": "^10.12.1",
     "framer-motion": "^11.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
